src/Hikkaba.Web/wwwroot/css/site.css
body {
    padding-top: 10px;
    padding-bottom: 10px;
}

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Set widths on the form inputs since otherwise they're 100% wide */
input,
select,
textarea {
    max-width: 280px;
}

/* Carousel */
.carousel-caption p {
    font-size: 20px;
    line-height: 1.4;
}

/* buttons and links extension to use brackets: [ click me ] */
.btn-bracketed::before {
    display:inline-block;
    content: "[";
    padding-right: 0.5em;
}
.btn-bracketed::after {
    display:inline-block;
    content: "]";
    padding-left: 0.5em;
}

/* Make .svg files in the carousel display properly in older browsers */
.carousel-inner .item img[src$=".svg"]
{
    width: 100%;
}

/* Hide/rearrange for smaller screens */
@media screen and (max-width: 767px) {
  /* Hide captions */
  .carousel-caption {
    display: none
  }
}

/* Remove borders from list-group */
li.borderless {
  border: none;
}

/* post styles */
span.visible-line-breaks pre {
    margin-top: 10px;
}

/* spoiler */
.censored {
	color:black;
	background-color:black;
	padding:1px 
}
.censored a {
	color:black;
	text-decoration:underline;
	padding:1px 
}
.censored:hover {
	color:inherit;
	background-color:inherit !important 
}


.timestamp {
    padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
    font-weight: 500;
    line-height: 1.1;
    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

pre {
    display: inline-block;
}

.post-title {
    word-wrap: break-word;
}

a.post-title {
    color: #337ab7;
    text-decoration: none;
}

a.post-title:hover, a.post-title:focus {
    color: #23527c;
    text-decoration: underline;
}

.display-inline {
    display: inline;
}

.search-input {
     width: 100%; max-width: 100%;
} 

